--- a/charts/guard/templates/auth-grove/peas.yaml
+++ b/charts/guard/templates/auth-grove/peas.yaml
@@ -37,11 +37,6 @@ spec:
         {{- include "guard-helm.labels" $ | nindent 8 }}
         app: {{$name}}-peas
     spec:
-      # Use an init container to wait for the PADS server to be ready.
-      initContainers:
-      - name: wait-for-pads
-        image: busybox
-        command: ['sh', '-c', 'until nc -z guard-pads 10002; do echo waiting for PADS; sleep 2; done']
       containers:
       - name: path-external-auth-server
         image: ghcr.io/buildwithgrove/path-external-auth-server:{{ default "latest" $peasConfig.imageTag }}
@@ -49,6 +44,19 @@ spec:
         env: {{- toYaml $peasConfig.env | nindent 10 }}
         ports:
         - containerPort: {{ $peasConfig.port }}
+        volumeMounts:
+          - name: {{$name}}-data
+            mountPath: {{ $peasConfig.mountPath }}
+      volumes:
+      {{- if $peasConfig.fromSecret }}
+      - name: {{$name}}-data
+        secret:
+          secretName: {{ $peasConfig.fromSecret.secretName }}
+      {{- else }}
+      - name: {{$name}}-data
+        configMap:
+          name: pads-data
+      {{- end }}
 ---
 apiVersion: v1
 kind: Service
@@ -63,5 +71,14 @@ spec:
     targetPort: {{ $peasConfig.port }}
     protocol: TCP
     name: grpc
+---
+{{- if not $peasConfig.fromSecret }}
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: pads-data
+  namespace: {{ $.Values.global.namespace }}
+data: {{- toYaml $peasConfig.configMap | nindent 4 }}
+{{- end }}
 
 {{- end }}
