--- a/charts/guard/templates/rate-limiter/ratelimit.yaml
+++ b/charts/guard/templates/rate-limiter/ratelimit.yaml
@@ -17,6 +17,13 @@ spec:
       # Ensure that the rate limit is shared across all HTTPRoutes
       shared: true
       rules:
+      # This section creates rules based on plans defined in the 
+      # `rateLimit.plans` section of the `values.yaml` file.
+      #
+      # Example plan rule:
+      #   - header: "Rl-Plan-Free"
+      #     requests: 5000
+      #     unit: Day
 {{- range .Values.rateLimit.plans }}
       - clientSelectors:
         - headers:
@@ -25,5 +32,53 @@ spec:
         limit:
           requests: {{ .requests }}
           unit: {{ .unit }}
+{{- end }}
+# -- Grove Legacy auth configuration --
+# ######### VERY IMPORTANT #########
+# If you are not authorizing Grove Portal requests,
+# this is VERY unlikely to fit your exact use-case.
+#
+# This section will create N rules for matching Rate Limit headers set inside PEAS:
+#   - https://github.com/buildwithgrove/path-external-auth-server/blob/main/ratelimit/ratelimit.go
+# For example:
+#   - Rl-User-Limit-1: 1 million requests per month
+#   - Rl-User-Limit-2: 2 million requests per month
+#   - ...
+#   - Rl-User-Limit-60: 60 million requests per month
+#
+# The number 60 was chosen for two reasons:
+#   1. It handles all increments up to 60 million requests per month, which 
+#      covers all current user-specified monthly user limits in the Portal.
+#   2. Envoy Gateway allows a maximum of 64 rules currently:
+#      https://github.com/envoyproxy/gateway/issues/5696
+{{- if and .Values.rateLimit.enabled .Values.auth.groveLegacy.enabled }}
+{{- range $i := until 60 }}
+{{- $limit := add $i 1 }}
+      - clientSelectors:
+        - headers:
+          - type: Distinct
+            name: "Rl-User-Limit-{{ $limit }}"
+        limit:
+          # TODO_TECHDEBT(@commoddity): Envoy Gateway currently only support rate limiting
+          # in a maximum unit of a `Day` so divide the monthly limit by 30 as a workaround. 
+          #
+          # This is actively being worked on by the Envoy Gateway 
+          # team so when the following Issue is solved, we can:
+          #  - remove the division by 30
+          #  - update the unit to `Month`
+          #
+          # Github refs:
+          #  - Issue: https://github.com/envoyproxy/gateway/issues/6019
+          #  - Pull request: https://github.com/envoyproxy/gateway/pull/4495
+          
+          # Calculate the daily relay limit by dividing the user's monthly limit by 30.
+          # (limit * 1,000,000) / 30 = <daily relay limit> 
+          # Examples:
+          #   - Rl-User-Limit-1: ceil(1,000,000 ÷ 30) = ceil(33,333.33...) = 33,334
+          #   - Rl-User-Limit-2: ceil(2,000,000 ÷ 30) = ceil(66,666.66...) = 66,667
+          #   - Rl-User-Limit-60: ceil(60,000,000 ÷ 30) = ceil(2,000,000) = 2,000,000
+          requests: {{ ceil (div (mul $limit 1000000) 30) }} 
+          unit: Day
+{{- end }}
 {{- end }}
 {{- end }}
