[PATH Migration][GUARD] Remove PADS from Grove auth templates folder and update PEAS config (#87)
## 🌿 Summary

Cleanup of deprecated PADS deployment from the Grove authorization
templates in the `guard` chart as part of PATH migration initiative.

### 🌱 Primary Changes:
- Removed the `pads.yaml` Helm template defining the PADS Deployment,
Service, and ConfigMap
- Eliminated the associated `pads` configuration block from
`values.yaml`
- Removed the PADS init container dependency from the PEAS deployment

### 🍃 Secondary changes:
- Updated `peas.yaml` to mount configuration data directly via
volumetric config
- Added conditional creation of `pads-data` ConfigMap under PEAS
template when not using secrets

## 🛠️ Type of change

Select one or more from the following:

- [x] Migration
- [x] GUARD

## 🤯 Sanity Checklist

- [x] I have updated the GitHub Issue 'assignees', 'reviewers',
'labels', 'project', 'iteration' and 'milestone'
- [x] For code, I have run 'make test_all'
- [x] For configurations, I have update the documentation

---------

Co-authored-by: Daniel Olshansky <olshansky.daniel@gmail.com>

--- a/charts/guard/templates/auth-grove/peas.yaml
+++ b/charts/guard/templates/auth-grove/peas.yaml
@@ -1,22 +1,20 @@
+# --------- VERY IMPORTANT ---------
+# Only use if you are authorizing Grove Portal requests.
+#   - Not likely to fit other use-cases.
+#
 # PATH External Authorization Server (PEAS) Helm Chart
-# Used as part of the Grove legacy authorization flow.
+#   - Used for Grove legacy authorization flow.
+#   - Github: https://github.com/buildwithgrove/path-external-auth-server
 #
-# ######### VERY IMPORTANT #########
-# If you are not authorizing Grove Portal requests,
-# this is VERY unlikely to fit your exact use-case.
-#
-# An external authorization server designed to authorize requests to the PATH Gateway.
-# This exists due to unique needs for authorizing Portal Apps in the Grove Portal that
-# could not be handled by out-of-the-box Envoy Gateway functionality, hence the need for
-# a custom authorization server implementation.
-#
-#
-# Key characteristics:
+# PEAS is a custom external authorization server for the PATH Gateway:
+#   - Built for unique Grove Portal App needs
+#   - Not handled by default Envoy Gateway features
 #   - Uses gRPC for communication
-#   - Adheres to the specification expected by the Envoy External Authorization HTTP Filter
-# Reference: https://www.envoyproxy.io/docs/envoy/latest/configuration/http/http_filters/ext_authz_filter
-# Github Repo: https://github.com/buildwithgrove/path-external-auth-server
+#   - Follows Envoy External Authorization HTTP Filter spec
 #
+# References:
+#   - Envoy Gateway Ext Auth: https://gateway.envoyproxy.io/docs/tasks/security/ext-auth/
+#   - Envoy Proxy Ext Authz Filter: https://www.envoyproxy.io/docs/envoy/latest/configuration/http/http_filters/ext_authz_filter
 {{- if .Values.auth.groveLegacy.enabled }}
 {{- $name:= include "guard-helm.fullname" . }}
 {{- $peasConfig:= .Values.auth.groveLegacy.peas }}
@@ -37,11 +35,6 @@ spec:
         {{- include "guard-helm.labels" $ | nindent 8 }}
         app: {{$name}}-peas
     spec:
-      # Use an init container to wait for the PADS server to be ready.
-      initContainers:
-      - name: wait-for-pads
-        image: busybox
-        command: ['sh', '-c', 'until nc -z guard-pads 10002; do echo waiting for PADS; sleep 2; done']
       containers:
       - name: path-external-auth-server
         image: ghcr.io/buildwithgrove/path-external-auth-server:{{ default "latest" $peasConfig.imageTag }}
@@ -49,6 +42,19 @@ spec:
         env: {{- toYaml $peasConfig.env | nindent 10 }}
         ports:
         - containerPort: {{ $peasConfig.port }}
+        volumeMounts:
+          - name: {{$name}}-data
+            mountPath: {{ $peasConfig.mountPath }}
+      volumes:
+      {{- if $peasConfig.fromSecret }}
+      - name: {{$name}}-data
+        secret:
+          secretName: {{ $peasConfig.fromSecret.secretName }}
+      {{- else }}
+      - name: {{$name}}-data
+        configMap:
+          name: peas-data
+      {{- end }}
 ---
 apiVersion: v1
 kind: Service
@@ -63,5 +69,14 @@ spec:
     targetPort: {{ $peasConfig.port }}
     protocol: TCP
     name: grpc
+---
+{{- if not $peasConfig.fromSecret }}
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: peas-data
+  namespace: {{ $.Values.global.namespace }}
+data: {{- toYaml $peasConfig.configMap | nindent 4 }}
+{{- end }}
 
 {{- end }}
